# playwright-praksa

./: .env_example  .gitignore  README.md  pyproject.toml
src/praksa/: __init__.py
tests/: Test1.py  Test2.py  TestNo.py  TestYes.py  tests.py
